# pip

./: CNAME  README.md
openai2_/: LICENSE  README.md  pyproject.toml
openai2_/openai2/: _chat.py  _group_chat.py
skk/ollama2/: README.md
skk_/: LICENSE  README.md  pyproject.toml
skk_/skk/base95/: README.md
skk_/skk/cliapi/: README.md  _core.py
skk_/skk/coolstr/: _core.py
skk_/skk/cooltime/: README.md
skk_/skk/envname/: README.md
skk_/skk/incrementer/: README.md
skk_/skk/miumapp/: README.md
skk_/skk/moduledb/: README.md
skk_/skk/mongo/: README.md
skk_/skk/mysql/: README.md
skk_/skk/objdb/: README.md
skk_/skk/rslice/: README.md
